--- a/src/app/reservation-form/reservation-form.component.html
+++ b/src/app/reservation-form/reservation-form.component.html
@@ -2,28 +2,43 @@
     <div>
         <label>Check-In Date:</label>
         <input type="date" formControlName="CheckInDate">
+        <div *ngIf="reservationForm.get('CheckInDate')?.invalid && reservationForm.get('CheckInDate')?.touched">
+            Check-in Date is Required
+        </div>
     </div>
 
     <div>
         <label>Check-Out Date:</label>
         <input type="date" formControlName="CheckOutDate">
+        <div *ngIf="reservationForm.get('CheckOutDate')?.invalid && reservationForm.get('CheckOutDate')?.touched">
+            Check-out Date is Required
+        </div>
     </div>
     
     <div>
         <label>Guest Name:</label>
         <input type="text" formControlName="guestName">
+        <div *ngIf="reservationForm.get('guestName')?.invalid && reservationForm.get('guestName')?.touched">
+            Guest Name is Required
+        </div>
     </div>
 
     <div>
         <label>Guest Email:</label>
         <input type="email" formControlName="guestEmail">
+        <div *ngIf="reservationForm.get('guestEmail')?.invalid && reservationForm.get('guestEmail')?.touched">
+            Guest Email is Required
+        </div>
     </div>
 
     <div>
         <label>Room Number</label>
         <input type="number" formControlName="roomNumber">
+        <div *ngIf="reservationForm.get('roomNumber')?.invalid && reservationForm.get('roomNumber')?.touched">
+            Room Number is Required
+        </div>
     </div>
 
-    <button type="submit">Submit</button>
+    <button type="submit" [disabled]="reservationForm.invalid">Submit</button>
 
 </form>
