--- a/src/app/reservation-form/reservation-form.component.html
+++ b/src/app/reservation-form/reservation-form.component.html
@@ -1,16 +1,17 @@
+<app-home></app-home>
 <form [formGroup]="reservationForm" (ngSubmit)="onSubmit()">
     <div>
         <label>Check-In Date:</label>
-        <input type="date" formControlName="CheckInDate">
-        <div *ngIf="reservationForm.get('CheckInDate')?.invalid && reservationForm.get('CheckInDate')?.touched">
+        <input type="date" formControlName="checkInDate">
+        <div *ngIf="reservationForm.get('checkInDate')?.invalid && reservationForm.get('checkInDate')?.touched">
             Check-in Date is Required
         </div>
     </div>
 
     <div>
         <label>Check-Out Date:</label>
-        <input type="date" formControlName="CheckOutDate">
-        <div *ngIf="reservationForm.get('CheckOutDate')?.invalid && reservationForm.get('CheckOutDate')?.touched">
+        <input type="date" formControlName="checkOutDate">
+        <div *ngIf="reservationForm.get('checkOutDate')?.invalid && reservationForm.get('checkOutDate')?.touched">
             Check-out Date is Required
         </div>
     </div>
