--- a/src/app/reservation-list/reservation-list.component.html
+++ b/src/app/reservation-list/reservation-list.component.html
@@ -1,1 +1,18 @@
-<p>reservation-list works!</p>
+<app-home></app-home>
+<h2>Reservation List</h2>
+
+<ul *ngIf="reservations.length; else noReservation">
+    <li *ngFor="let reservation of reservations">
+        Guest: {{reservation.guestName}} <br>
+        Email: {{reservation.guestEmail}} <br>
+        Check-In Date: {{reservation.checkInDate}} <br>
+        Check-Out Date: {{reservation.checkOutDate}} <br>
+        Room Number: {{reservation.roomNumber}}<br>
+        <button (click)="deleteReservation(reservation.id)">Delete</button>
+        <button [routerLink]="['/edit',reservation.id]">Edit</button>
+    </li>
+</ul>
+
+<ng-template #noReservation>
+    <p>No Reservation available.</p>
+</ng-template>
